# LFS

./: pyproject.toml
src/data/: common.py
src/data/download/: config.py  download.py  generate_download_config.py  utils.py
src/data/preprocess/: pretrain.py  utils.py
src/utils/: common.py
